--- a/platformio.ini
+++ b/platformio.ini
@@ -14,12 +14,15 @@ board = esp12e
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
-lib_deps = bodmer/TFT_eSPI@^2.3.67
+lib_deps = 
+	bodmer/TFT_eSPI@^2.3.67
+	bodmer/TJpg_Decoder@^0.2.0
+	yakumo/TimerCall@^0.4.0
 build_flags = 
 	-Os
 	-DCORE_DEBUG_LEVEL=2
 	-DUSER_SETUP_LOADED=1
-    -DILI9341_DRIVER=1
+	-DILI9341_DRIVER=1
 	-DTFT_WIDTH=320
 	-DTFT_HEIGHT=240
 	-DTFT_MOSI=13
