--- a/platformio.ini
+++ b/platformio.ini
@@ -23,13 +23,11 @@ build_flags =
 	-DCORE_DEBUG_LEVEL=2
 	-DUSER_SETUP_LOADED=1
 	-DILI9341_DRIVER=1
-	-DTFT_WIDTH=320
-	-DTFT_HEIGHT=240
 	-DTFT_MOSI=13
 	-DTFT_SCLK=14
 	-DTFT_CS=15
-	-DTFT_DC=2
-	-DTFT_RST=4
+	-DTFT_DC=4
+	-DTFT_RST=5
 	-DTFT_BL=0
 	-DSPI_FREQUENCY=20000000
 	-DLOAD_GLCD=1
@@ -40,3 +38,6 @@ build_flags =
 	-DLOAD_FONT7=1
 	-DLOAD_GFXFF=1
 	-DSMOOTH_FONT=1
+
+#	-DTFT_WIDTH=320
+#	-DTFT_HEIGHT=240
