--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+description = "ESP-dumb display for ESP8266/ESP32"
+default_envs = esp32s3box
+
+# ESP8266 with ILI9341 320x240 LCD
 [env:esp12e]
 platform = espressif8266
 board = esp12e
@@ -39,5 +44,21 @@ build_flags =
 	-DLOAD_GFXFF=1
 	-DSMOOTH_FONT=1
 
-#	-DTFT_WIDTH=320
-#	-DTFT_HEIGHT=240
+
+# target board: ESP32-8048S050N
+# ESP32S3 with ILI9485(ILI6485) 800x480 LCD
+[env:esp32s3box]
+platform = espressif32
+board =  esp32-s3-devkitc-1
+framework = arduino
+board_build.mcu = esp32s3
+monitor_speed = 115200
+upload_speed = 921600
+board_build.f_cpu = 80000000L
+lib_deps = 
+	bitbank2/JPEGDEC@^1.2.8
+	yakumo/TimerCall
+	moononournation/GFX Library for Arduino@^1.4.1
+build_flags = 
+	-Os
+
