works with PSRAM

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [platformio]
 description = "ESP-dumb display for ESP8266/ESP32"
-default_envs = esp32s3box
+default_envs = esp32s3-N16P8
 
 # ESP8266 with ILI9341 320x240 LCD
 [env:esp12e]
@@ -46,19 +46,23 @@ build_flags =
 
 
 # target board: ESP32-8048S050N
-# ESP32S3 with ILI9485(ILI6485) 800x480 LCD
-[env:esp32s3box]
+# ESP32S3 with ILI9485(ILI6485) 470x272 LCD
+# Need PSRAM
+[env:esp32s3-N16P8]
 platform = espressif32
-board =  esp32-s3-devkitc-1
+board = esp32-s3-devkitc-1
 framework = arduino
 board_build.mcu = esp32s3
 monitor_speed = 115200
 upload_speed = 921600
 board_build.f_cpu = 80000000L
+board_build.arduino.memory_type = dio_opi
+board_upload.flash_size = 16MB
 lib_deps = 
 	bitbank2/JPEGDEC@^1.2.8
 	yakumo/TimerCall
 	moononournation/GFX Library for Arduino@^1.4.1
 build_flags = 
 	-Os
+	-DBOARD_HAS_PSRAM
 
