--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,10 @@
 description = "ESP-dumb display for ESP8266/ESP32"
 default_envs = esp32s3-N16P8
 
+[env]
+extra_scripts =
+	pre:build_script/create_embed.py
+
 # ESP8266 with ILI9341 320x240 LCD
 [env:esp12e]
 platform = espressif8266
@@ -22,7 +26,8 @@ upload_speed = 921600
 lib_deps = 
 	bodmer/TFT_eSPI@^2.3.67
 	bodmer/TJpg_Decoder@^0.2.0
-	yakumo/TimerCall@^0.4.0
+	yakumo/TimerCall
+    bblanchon/ArduinoJson
 build_flags = 
 	-Os
 	-DCORE_DEBUG_LEVEL=2
@@ -62,6 +67,7 @@ lib_deps =
 	bitbank2/JPEGDEC@^1.2.8
 	yakumo/TimerCall
 	moononournation/GFX Library for Arduino@^1.4.1
+    bblanchon/ArduinoJson
 build_flags = 
 	-Os
 	-DBOARD_HAS_PSRAM
