add setup mode AP

--- a/platformio.ini
+++ b/platformio.ini
@@ -50,7 +50,7 @@ build_flags =
 	-DSMOOTH_FONT=1
 
 
-# target board: ESP32-8048S050N
+# target board: ESP32-4827S043N
 # ESP32S3 with ILI9485(ILI6485) 470x272 LCD
 # Need PSRAM
 [env:esp32s3-N16P8]
@@ -66,6 +66,7 @@ board_upload.flash_size = 16MB
 lib_deps = 
 	bitbank2/JPEGDEC@^1.2.8
 	yakumo/TimerCall
+    olikraus/U8g2
 	moononournation/GFX Library for Arduino@^1.4.1
     bblanchon/ArduinoJson
 build_flags = 
